# clustering-aws

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  project_config.cfg  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_lambda.txt
aws/: app.py  app_local.py  app_new.py  daddy_lambda.py  state_machine.asl.json
aws/breaker_upper/: Dockerfile  breaker_upper.py
clustering/: kmeans.py  kmeans_new.py  reporting.py  utils.py
demo/: demo.ipynb
demo/data/: grids.parquet  rooftops.parquet
notebooks/: HPLS_clustering.ipynb  HPLS_data_processing.ipynb  HPLS_post_processing.ipynb  HPLS_pre_processing.ipynb  experiments.ipynb  plotting.py  utils.py
